[package]
name = "next-line"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy-regex = "3.2.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
enum_glob_use = "deny"
expect_used = "deny"
unwrap_used = "deny"
